identity/laptop/pocket-id/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pocket-id
  namespace: identity
  annotations:
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  ingressClassName: traefik
  rules:
    - host: id.home.arpa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pocket-id
                port:
                  name: http
  tls:
    - hosts:
        - id.home.arpa
      secretName: pocket-id-tls
